<?xml version="1.0"?>
<package format="3">
  <name>location_pkg</name>
  <version>0.0.1</version>
  <description>Paquete para estimación de posición y streaming de cámara</description>

  <maintainer email="david_thruiz@hotmail.es">David Thomas</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias ROS -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Dependencias de sistema -->
  <exec_depend>libopencv-dev</exec_depend>

  <!-- Dependencias de test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
